...
import UIKit

final class SearchHistoryViewController: UIViewController {
    private let tableView: UITableView = {
        let tableView = UITableView(frame: .zero, style: .grouped)
        tableView.separatorStyle = .singleLine
        tableView.accessibilityIdentifier = "searchHistoryTableView"
        return tableView
    }()

    private let presenter: SearchHistoryViewOutputProtocol
    private let tableViewDataSource: SearchHistoryDataSourceProtocol

...
    override func viewWillAppear(_ animated: Bool) {
        super.viewWillAppear(animated)
        presenter.viewDidLoad()
    }

    private func setupNavigationBar() {
        title = "History"
    }

    private func setupViews() {
        view.addSubview(tableView)
        view.backgroundColor = .systemGray6

...
